--- a/src/index.html
+++ b/src/index.html
@@ -150,11 +150,21 @@
 		</div>
 	</section>
 
-	<section class="about">
+	 <section class="about">
 		<div class="container">
 			<div class="about__wrapper">
 				<div class="about__photo">
-					<img src="img/main_photo.jpg" alt="Photo">
+					<!-- <img srcset="img/main_photo-min.jpg 300w,
+											 img/main_photo.jpg 400w"
+							 sizes="(max-width: 576px) 280px,
+										  (min-width: 577px) 400px"
+					src="img/main_photo.jpg" alt="Photo"> -->
+
+					<picture>
+						<source media="(max-width: 576px)" srcset="img/main_photo-min.jpg">
+						<source media="(min-width: 577px)" srcset="img/main_photo.jpg">
+						<img src="img/main_photo.jpg" alt="Photo">
+					</picture>
 				</div>
 				<div class="about__descr">
 					<h2 class="title title_fz16 about__title">Про меня</h2>
